# SISE-15

./: AStar.cpp  AStar.h  BFS.cpp  BFS.h  CMakeLists.txt  DFS.cpp  DFS.h  Solution.h  State.cpp  State.h  StatesSet.h  d.cmd  main.cpp  run.cmd
data/result/bfs/: 4x4_01_0001_bfs_rdul_stats.txt
data/result/dfs/: 4x4_01_00001_dfs_odp_stats.txt  4x4_01_00001_odp.txt
